<resources>
    <string name="app_name">Motion</string>
    <string name="app_bar_plus_title">plus</string>
    <string name="app_bar_plus_content_desc">Add a new goal</string>
    <string name="app_bar_back_content_desc">Go back to your list of goals</string>
    <string name="app_bar_back_title">back</string>
    <string name="goal_dialog_confirm">Confirm</string>
    <string name="goal_dialog_cancel">Cancel</string>
    <string name="goal_dialog_title">Add New Goal</string>
    <string name="goal_dialog_title_alternate">Edit Goal</string>
    <string name="goal_dialog_goalname_title">Goal Name</string>
    <string name="goal_dialog_goaldesc_title">Goal Description</string>
    <string name="goal_dialog_goalrange_start">Min Daily</string>
    <string name="goal_dialog_goalrange_end">Max Daily</string>
    <string name="goal_recyclerview_background_content_desc">One of your goals</string>

    <string name="goal_calendar_monday">MON</string>
    <string name="goal_calendar_tuesday">TUE</string>
    <string name="goal_calendar_wednesday">WED</string>
    <string name="goal_calendar_thursday">THU</string>
    <string name="goal_calendar_friday">FRI</string>
    <string name="goal_calendar_saturday">SAT</string>
    <string name="goal_calendar_sunday">SUN</string>
</resources>