<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLegendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/cLegendDayOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_sunday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDayTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_monday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDayThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_tuesday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDayFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_wednesday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDayFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_thursday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDaySix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_friday"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cLegendDaySeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goal_calendar_saturday"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>